# Computer-Graphic

./: README.md
03_Shadows/: 03_Shadows.sln  New Microsoft Word Document.docx
03_Shadows/03_Shadows/: 03_Shadows.vcxproj  03_Shadows.vcxproj.filters  CMakeLists.txt  MyApp.cpp  MyApp.h  imgui.ini  main.cpp
03_Shadows/03_Shadows/Includes/: BufferObject.h  GLconversions.hpp  ProgramObject.cpp  ProgramObject.h  ProgramObject.inl  ShaderObject.h  TextureObject.h
03_Shadows/03_Shadows/Shaders/: myFrag.frag  myVert.vert  shadow_map.frag  shadow_map.vert
03_Shadows/03_Shadows/x64/Debug/: 03_Shadows.exe.recipe  vc142.idb
03_Shadows/03_Shadows/x64/Debug/03_Shadows.tlog/: 03_Shadows.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
04_Deferred/04_Deferred/: 04_Deferred.sln
04_Deferred/04_Deferred/04_Deferred/: 04_Deferred.vcxproj  04_Deferred.vcxproj.filters  CMakeLists.txt  MyApp.cpp  MyApp.h  imgui.ini  main.cpp
04_Deferred/04_Deferred/04_Deferred/Includes/: BufferObject.inl  Mesh_OGL3.cpp  TextureObject.inl  VertexArrayObject.h
04_Deferred/04_Deferred/04_Deferred/Shaders/: deferredPoint.frag  deferredPoint.vert  myFrag.frag  myVert.vert
session 5/: box filter.txt  notes.docx
session 5/02_ShadersVAOVBO/02_ShadersVAOVBO/02_ShadersVAOVBO/: 02_ShadersVAOVBO.vcxproj  MyApp.cpp  MyApp.h  main.cpp  myFrag.frag  myVert.vert
session 5/02_ShadersVAOVBO/02_ShadersVAOVBO/02_ShadersVAOVBO/Debug/: 02_ShadersVAOVBO.exe.recipe  02_ShadersVAOVBO.ilk  vc142.idb
session 5/02_ShadersVAOVBO/02_ShadersVAOVBO/02_ShadersVAOVBO/Debug/02_ShadersVAOVBO.tlog/: 02_ShadersVAOVBO.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
session 5/02_ShadersVAOVBO2/02_ShadersVAOVBO/: CMakeLists.txt
session 5/02_ShadersVAOVBO2/02_ShadersVAOVBO/02_ShadersVAOVBO/: GLUtils.hpp  MyApp.cpp  main.cpp  myFrag.frag  myVert.vert
session 5/02_ShadersVAOVBO2/02_ShadersVAOVBO/02_ShadersVAOVBO/Debug/: 02_ShadersVAOVBO.exe.recipe  02_ShadersVAOVBO.ilk  vc142.idb
session 5/02_ShadersVAOVBO2/02_ShadersVAOVBO/02_ShadersVAOVBO/Debug/02_ShadersVAOVBO.tlog/: 02_ShadersVAOVBO.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
